// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders correctly 1`] = `
.c0 {
  padding-left: 16.666666666666668rem;
}

@media (max-width:62.5em) {
  .c0 {
    padding-left: 0;
    padding-top: 3.888888888888889rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Content renders correctly 1`] = `
.c0 {
  width: 56.888888888888886rem;
  max-width: 100%;
  margin: 0 auto;
  padding: 2.7777777777777777rem 2.2222222222222223rem 1.6666666666666667rem 2.2222222222222223rem;
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
}

@media (max-width:62.5em) {
  .c0 {
    padding: 1.6666666666666667rem 1.1111111111111112rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Header renders correctly 1`] = `
.c0 {
  font-size: 1.7777777777777777rem;
  font-weight: 500;
  font-family: "Avenir Next",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
}

<h2
  className="c0"
/>
`;

exports[`SubHeader renders correctly 1`] = `
.c0 {
  display: block;
  margin: 1.9444444444444444rem 0 1.2222222222222223rem 0;
  font-size: 1.3333333333333333rem;
  font-weight: 500;
  font-family: "Avenir Next",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
}

<h3
  className="c0"
/>
`;

exports[`Title renders correctly 1`] = `
.c0 {
  display: block;
  text-align: left;
  width: 100%;
  color: rgb(243,182,97);
  font-size: 2.3333333333333335rem;
  font-weight: bold;
  font-family: "Avenir Next",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
}

<h1
  className="c0"
/>
`;
